# typeracer.nvim

./: NOTES.md  README.md
client/: splitter.lua  typeracer.lua
lua/: typeracer.lua
server/: Cargo.toml  tags  test-client.lua  words.txt
server/src/: main.rs
