[package]
name = "server"
version = "0.1.0"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
structopt = "0.3.15"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.3"
